app/src/home/mist.sass
canvas#mist
  margin-top: 60vh

  display: block

  width: 100%
  height: 80vh

  pointer-events: none
  -webkit-touch-callout: none

div.mist-gradient
  position: absolute
  display: block
  top: 85vh
  height: 55vh
  width: 100vw

  // Fake an easing on gradient color interpolation. The gradient begins
     slowly, changes quickly in the middle, and ends slowly. These values
     were generated by the easeInOutQuad function implementation that I
     found at http://gizma.com/easing/.

  $c1:  transparentize($color-light,   1)
  $c2:  transparentize($color-light, .98)
  $c3:  transparentize($color-light, .92)
  $c4:  transparentize($color-light, .82)
  $c5:  transparentize($color-light, .68)
  $c6:  transparentize($color-light,  .5)
  $c7:  transparentize($color-light, .32)
  $c8:  transparentize($color-light, .18)
  $c9:  transparentize($color-light, .08)
  $c10: transparentize($color-light, .02)
  $c11: transparentize($color-light,   0)

  background: linear-gradient($c1 0%, $c2 10%, $c3 20%, $c4 30%, $c5 40%, $c6 50%, $c7 60%, $c8 70%, $c9 80%, $c10 90%, $c11 100%)

canvas#mist,
div.mist-gradient
  // Pre-build properties: transparent and not transformed into view.
  transform: translateY(40vh)
  opacity: 0

  // During the build, the clouds will slide up and fade in
  transition: transform 3s, opacity 4s

  &.visible
    opacity: 1
    transform: none

